--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -1,338 +1,36 @@
-@article{Armitage2011a,
-author = {Armitage, Philip J.},
-doi = {10.1146/annurev-astro-081710-102521},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Armitage - 2011 - Dynamics of Protoplanetary Disks.pdf:pdf},
-issn = {0066-4146},
-journal = {ARA\&A},
-keywords = {accretion,pre-main-sequence stars,protoplanetary disks},
-month = sep,
-number = {1},
-pages = {195--236},
-title = {{Dynamics of Protoplanetary Disks}},
-url = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-081710-102521},
-volume = {49},
-year = {2011}
-}
-@article{Ayliffe2012,
-abstract = {We have conducted three-dimensional self-gravitating radiation hydrodynamical models of gas accretion on to high-mass cores (15-33 M⊕) over hundreds of orbits. Of these models, one case accretes more than a third of a Jupiter mass of gas, before eventually undergoing a hydrodynamic collapse. This collapse causes the density near the core to increase by more than an order of magnitude, and the outer envelope to evolve into a circumplanetary disc. A small reduction in the mass within the Hill radius (RH) accompanies this collapse as a shock propagates outwards. This collapse leads to a new hydrostatic equilibrium for the protoplanetary envelope, at which point 97 per cent of the mass contained within the Hill radius is within the inner 0.03RH which had previously contained less than 40 per cent. Following this collapse the protoplanet resumes accretion at its prior rate. The net flow of mass towards this dense protoplanet is predominantly from high latitudes, whilst at the outer edge of the circumplanetary disc there is net outflow of gas along the midplane. We also find a turnover of gas deep within the bound envelope that may be caused by the establishment of convection cells.},
-author = {Ayliffe, Ben A. and Bate, Matthew R.},
-doi = {10.1111/j.1365-2966.2012.21979.x},
-issn = {00358711},
-journal = {MNRAS},
-keywords = {hydrodynamics,methods: numerical,planets and satellites: formation,radiative transfer},
-month = dec,
-number = {3},
-pages = {2597--2612},
-title = {{The growth and hydrodynamic collapse of a protoplanet envelope}},
-url = {http://adsabs.harvard.edu/abs/2012MNRAS.427.2597A},
-volume = {427},
-year = {2012}
-}
-@article{Ayliffe2009,
-abstract = {We investigate the properties of circumplanetary discs formed in three-dimensional, self-gravitating radiation hydrodynamical models of gas accretion by protoplanets. We determine disc sizes, scaleheights, and density and temperature profiles for different protoplanet masses, in solar nebulae of differing grain opacities.  We find that the analytical prediction of circumplanetary disc radii in an evacuated gap (RHill/3) from Quillen \&amp; Trilling yields a good estimate for discs formed by high-mass protoplanets. The radial density profiles of the circumplanetary discs may be described by power laws between r-2 and r-3/2. We find no evidence for the ring-like density enhancements that have been found in some previous models of circumplanetary discs. Temperature profiles follow a \~{} r-7/10 power law regardless of protoplanet mass or nebula grain opacity. The discs invariably have large scaleheights (H/r \&gt; 0.2), making them thick in comparison with their encompassing circumstellar discs, and they show no flaring.},
-author = {Ayliffe, Ben A. and Bate, Matthew R.},
-doi = {10.1111/j.1365-2966.2009.15002.x},
-issn = {00358711},
-journal = {MNRAS},
-keywords = {accretion,accretion discs,hydrodynamics,methods: numerical,planetary systems: formation,planets and satellites: formation,radiative transfer},
-month = aug,
-number = {2},
-pages = {657--665},
-title = {{Circumplanetary disc properties obtained from radiation hydrodynamical simulations of gas accretion by protoplanets}},
-url = {http://adsabs.harvard.edu/abs/2009MNRAS.397..657A},
-volume = {397},
-year = {2009}
-}
-@misc{Ben2014,
-author = {Ben, Pablo and Masset, Fr\'{e}d\'{e}ric},
-file = {:home/oscar/Dropbox/maestria/tesis\_maestria/papers/FARGO3DUserGuide.pdf:pdf},
-keywords = {tesis\_maestria},
-mendeley-tags = {tesis\_maestria},
-title = {{FARGO3D User Guide}},
-url = {http://fargo.in2p3.fr/manuals/FARGO3DUserGuide.pdf},
-year = {2014}
-}
-@article{Bodenheimer1986,
-abstract = {The evolution of the giant planets is calculated under the general hypothesis that the solid cores formed first, by accretion of small particles, and that these cores later gravitationally attracted their gaseous envelopes from the solar nebula. The evolution passes through the following phases. (1) Planetesimals accrete to form a core of rocky and icy material. (2) When the core mass has grown to a few tenths of an Earth mass, a gaseous envelope in hydrostatic equilibrium begins to form around the core. (3) The core and envelope continue to grow until the “critical” core mass is reached, beyond which point the envelope increases in mass much more rapidly than the core. (4) The envelope mass increases quickly to its present value and prodices a relatively high luminosity, derived from gravitational contraction. (5) Accretion of both core and envelope terminates, and the planet contracts and cools to its present state on a time scale of 5 × 109 years. Evolutionary calculations of phases (2) through (5) are presented, based on solutions of the time-dependent stellar structure equations in spherical symmetry. The physical considerations that determine the critical core mass are discussed; its value is found to depend strongly on the core accretion rate but only weakly on surface boundary conditions. Evolutionary tracks up to the present state are presented for objects of Uranus and Saturn mass.},
-author = {Bodenheimer, Peter and Pollack, James B.},
-doi = {10.1016/0019-1035(86)90122-3},
-issn = {00191035},
-journal = {Icarus},
-month = sep,
-number = {3},
-pages = {391--408},
-title = {{Calculations of the accretion and evolution of giant planets: The effects of solid cores}},
-url = {http://linkinghub.elsevier.com/retrieve/pii/0019103586901223},
-volume = {67},
-year = {1986}
-}
-@article{Durisen2006,
-abstract = {Protoplanetary gas disks are likely to experience gravitational instabilites (GI's) during some phase of their evolution. Density perturbations in an unstable disk grow on a dynamic time scale into spiral arms that produce efficient outward transfer of angular momentum and inward transfer of mass through gravitational torques. In a cool disk with rapid enough cooling, the spiral arms in an unstable disk form self-gravitating clumps. Whether gas giant protoplanets can form by such a disk instability process is the primary question addressed by this review. We discuss the wide range of calculations undertaken by ourselves and others using various numerical techniques, and we report preliminary results from a large multi-code collaboration. Additional topics include -- triggering mechanisms for GI's, disk heating and cooling, orbital survival of dense clumps, interactions of solids with GI-driven waves and shocks, and hybrid scenarios where GI's facilitate core accretion. The review ends with a discussion of how well disk instability and core accretion fare in meeting observational constraints.},
+@article{Barragan2016,
+abstract = {We report the discovery of K2-98 b (EPIC 211391664 b), a transiting Neptune-sized planet monitored by the K2 mission during its campaign 5. We combine the K2 time-series data with ground-based photometric and spectroscopic follow-up observations to confirm the planetary nature of the object and derive its mass, radius, and orbital parameters. K2-98 b is a warm Neptune-like planet in a 10-day orbit around a V=12.2$\sim$mag F-type star with $M_\star$=$ 1.074\pm0.042$, $R_\star$=$ 1.311 ^{+ 0.083} _{ - 0.048} $, and age of $5.2_{-1.0}^{+1.2}$$\sim$Gyr. We derive a planetary mass and radius of $M_\mathrm{p}$=$ 32.2 \pm 8.1 $ and $R_\mathrm{p}$=$4.3^{+0.3}_{-0.2}$. K2-98 b joins the relatively small group of Neptune-sized planets whose both mass and radius have been derived with a precision better than 25 %. We estimate that the planet will be engulfed by its host star in $\sim$3$\sim$Gyr, due to the evolution of the latter towards the red giant branch.},
 archivePrefix = {arXiv},
-arxivId = {astro-ph/0603179},
-author = {Durisen, Richard and Boss, Alan and Mayer, Lucio and Nelson, Andy and Quinn, Thomas and Rice, Ken},
-eprint = {0603179},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Durisen et al. - 2006 - Gravitational Instabilities in Gaseous Protoplanetary Disks and Implications for Giant Planet Formation.pdf:pdf},
-journal = {arXiv Prepr. astro-ph/ \ldots},
-month = mar,
-number = {1},
-pages = {17},
-primaryClass = {astro-ph},
-title = {{Gravitational Instabilities in Gaseous Protoplanetary Disks and Implications for Giant Planet Formation}},
-url = {http://adsabs.harvard.edu/cgi-bin/bib\_query?arXiv:astro-ph/0603179},
-year = {2006}
+arxivId = {1608.01165},
+author = {Barrag{\'{a}}n, Oscar and Grziwa, Sascha and Gandolfi, Davide and Fridlund, Malcolm and Endl, Michael and Deeg, Hans J. and Cagigal, Manuel P. and Lanza, Antonino F. and Moroni, Pier G. Prada and Smith, Alexis M. S. and Korth, Judith and Bedell, Megan and Cabrera, Juan and Cochran, William D. and Cusano, Felice and Csizmadia, Szilard and Eigm{\"{u}}ller, Philipp and Erikson, Anders and Guenther, Eike W. and Hatzes, Artie P. and Nespral, David and P{\"{a}}tzold, Martin and Prieto-Arranz, Jorge and Rauer, Heike},
+doi = {10.3847/0004-6256/152/6/193},
+eprint = {1608.01165},
+file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Barrag{\'{a}}n et al. - 2016 - K2-98b A 32 M ⊕ NEPTUNE-SIZE PLANET IN A 10 DAY ORBIT TRANSITING AN F8 STAR(2).pdf:pdf},
+issn = {1538-3881},
+journal = {AJ},
+keywords = {detection,epic 211391664b,fundamental parameters,individual,planets and satellites,stars},
+month = {nov},
+number = {6},
+pages = {193},
+title = {{K2-98b: A 32 M ⊕ NEPTUNE-SIZE PLANET IN A 10 DAY ORBIT TRANSITING AN F8 STAR}},
+url = {http://arxiv.org/abs/1608.01165 http://stacks.iop.org/1538-3881/152/i=6/a=193?key=crossref.9c74d9771cd2701ef81e7305ec423010},
+volume = {152},
+year = {2016}
 }
-@article{Fujii2014,
-author = {Fujii, Yuri I. and Okuzumi, Satoshi and Tanigawa, Takayuki and Inutsuka, Shu-ichiro},
-doi = {10.1088/0004-637X/785/2/101},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fujii et al. - 2014 - ON THE VIABILITY OF THE MAGNETOROTATIONAL INSTABILITY IN CIRCUMPLANETARY DISKS.pdf:pdf},
-issn = {0004-637X},
-journal = {ApJ},
-keywords = {color figure,dust,extinction,formation,online-only material,planets and satellites,protoplanetary disks},
-month = apr,
-number = {2},
-pages = {101},
-title = {{ON THE VIABILITY OF THE MAGNETOROTATIONAL INSTABILITY IN CIRCUMPLANETARY DISKS}},
-url = {http://stacks.iop.org/0004-637X/785/i=2/a=101?key=crossref.b317dc0eb585584dbe0d5ae3231edb6d},
-volume = {785},
-year = {2014}
-}
-@article{HaischJr.2001,
-author = {{Haisch, Jr.}, Karl E. and Lada, Elizabeth A. and Lada, Charles J.},
-doi = {10.1086/320685},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Haisch, Jr., Lada, Lada - 2001 - Disk Frequencies and Lifetimes in Young Clusters.pdf:pdf},
-issn = {0004637X},
-journal = {ApJ},
-month = jun,
-number = {2},
-pages = {L153--L156},
-title = {{Disk Frequencies and Lifetimes in Young Clusters}},
-url = {http://stacks.iop.org/1538-4357/553/i=2/a=L153},
-volume = {553},
-year = {2001}
-}
-@article{Isella2014,
-annote = {Maybe the project for my protoplanetary disks class?},
-author = {Isella, Andrea and Chandler, Claire J. and Carpenter, John M. and P\'{e}rez, Laura M. and Ricci, Luca},
-doi = {10.1088/0004-637X/788/2/129},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Isella et al. - 2014 - SEARCHING FOR CIRCUMPLANETARY DISKS AROUND LkCa 15.pdf:pdf},
-issn = {0004-637X},
-journal = {ApJ},
-keywords = {angular resolution,color figures,disk interactions,fact they provide information,high,interferometric,masking measurements and the,online-only material,planet,planetary systems,protoplanetary disks,submillimeter,techniques},
-month = jun,
-number = {2},
-pages = {129},
-title = {{SEARCHING FOR CIRCUMPLANETARY DISKS AROUND LkCa 15}},
-url = {http://stacks.iop.org/0004-637X/788/i=2/a=129?key=crossref.b4c8df2d4d8405f8fd6f42b2c2a2a30c},
-volume = {788},
-year = {2014}
-}
-@article{Klahr2006,
-abstract = {We study the evolution of an embedded protoplanet in a circumstellar disk using the 3D-Radiation Hydro code TRAMP, and treat the thermodynamics of the gas properly in three dimensions. The primary interest of this work lies in the demonstration and testing of the numerical method. We show how far numerical parameters can influence the simulations of gap opening. We study a standard reference model under various numerical approximations. Then we compare the commonly used locally isothermal approximation to the radiation hydro simulation using an equation for the internal energy. Models with different treatments of the mass accretion process are compared. Often mass accumulates in the Roche lobe of the planet creating a hydrostatic atmosphere around the planet. The gravitational torques induced by the spiral pattern of the disk onto the planet are not strongly affected in the average magnitude, but the short time scale fluctuations are stronger in the radiation hydro models. An interesting result of this work lies in the analysis of the temperature structure around the planet. The most striking effect of treating the thermodynamics properly is the formation of a hot pressure-supported bubble around the planet with a pressure scale height of H/R ≈ 0.5 rather than a thin Keplerian circumplanetary accretion disk.},
-author = {Klahr, H. and Kley, W.},
-doi = {10.1051/0004-6361:20053238},
-issn = {0004-6361},
-journal = {A\&A},
-keywords = {accretion,accretion disks,hydrodynamics,planets and satellites: formation,radiative transfer,solar system: formation},
-month = jan,
-number = {2},
-pages = {747--758},
-title = {{3D-radiation hydro simulations of disk-planet interactions}},
-url = {http://adsabs.harvard.edu/abs/2006A\&A...445..747K},
-volume = {445},
-year = {2006}
-}
-@article{Masset2000,
-abstract = {We present an efficient and simple modification of the standard transport algorithm used in explicit eulerian fixed polar grid codes, aimed at getting rid of the average azimuthal velocity when applying the Courant condition. This results in a much larger timestep then the usual procedure, and it is particularly well-suited to the description of a Keplerian disk where one is traditionally limited by the very demanding Courant condition on the fast orbital motion at the inner boundary. In this modified algorithm, the timestep is limited by the perturbed velocity and by the shear arising from the differential rotation. FARGO stands for ``Fast Advection in Rotating Gaseous Objects''. The speed-up resulting from the use of the FARGO algorithm is problem dependent. In the example presented here, which shows the evolution of a Jupiter sized protoplanet embedded in a minimum mass protoplanetary nebula, the FARGO algorithm is about an order of magnitude faster than a traditional transport scheme, with a much smaller numerical diffusivity.},
+@article{Barragan2017,
+abstract = {We announce the discovery of EPIC218916923 b, a transiting warm-Jupiter ($T_\mathrm{eq}$=555$\pm$11 K) on a 29-day orbit around an active (log$R^\prime_\mathrm{HK}$ = $-$4.49 $\pm$ 0.03) K0 V star in K2 Campaign 7. We derive the system's parameters by combining the K2 photometry with ground-based follow-up observations. With a mass of $M_\mathrm{p}=0.381 \pm 0.045 M_{\rm Jup}$ and radius of $R_\mathrm{p}= 0.812 \pm 0.030 R_{\rm Jup}$, EPIC218916923 b is one of the transiting warm Jupiters with the lowest mass known to date. The planetary mean density $\rho_\mathrm{p} = 0.88 \pm 0.14 {\rm g\,cm^{-3}}$ can be explained with a core of $\sim 50 M_\oplus$. Given the brightness of the host star ($V$= 11.653 mag), the relatively short transit duration ($\sim$5 hours), and the expected amplitude of the Rossiter-McLaughlin effect ($\sim$25 ms), EPIC218916923 is an ideal target to measure the spin-orbit angle of a planetary system hosting a warm Jupiter.},
+annote = {NULL},
 archivePrefix = {arXiv},
-arxivId = {astro-ph/9910390},
-author = {Masset, F.},
-doi = {10.1051/aas:2000116},
-eprint = {9910390},
-file = {:home/oscar/Dropbox/maestria/tesis\_maestria/papers/fargo\_paper.pdf:pdf},
-issn = {0365-0138},
-journal = {A\&AS},
-keywords = {tesis\_maestria},
-mendeley-tags = {tesis\_maestria},
-month = jan,
-number = {1},
-pages = {165--173},
-primaryClass = {astro-ph},
-title = {{FARGO: A fast eulerian transport algorithm for differentially rotating disks}},
-url = {http://adsabs.harvard.edu/cgi-bin/bib\_query?arXiv:astro-ph/9910390},
-volume = {141},
-year = {2000}
-}
-@article{E,
-author = {Masset, Fr\'{e}d\'{e}ric},
-file = {:home/oscar/Dropbox/maestria/tesis\_maestria/papers/fargo\_timestep.pdf:pdf},
-keywords = {tesis\_maestria},
-mendeley-tags = {tesis\_maestria},
-title = {{FARGO: a fast Eulerian (time step)}}
-}
-@article{Mayer2002,
-abstract = {The evolution of gravitationally unstable protoplanetary gaseous disks has been studied with the use of three-dimensional smoothed particle hydrodynamics simulations with unprecedented resolution. We have considered disks with initial masses and temperature profiles consistent with those inferred for the protosolar nebula and for other protoplanetary disks. We show that long-lasting, self-gravitating protoplanets arise after a few disk orbital periods if cooling is efficient enough to maintain the temperature close to 50 K. The resulting bodies have masses and orbital eccentricities similar to those of detected extrasolar planets.},
-author = {Mayer, Lucio and Quinn, Thomas and Wadsley, James and Stadel, Joachim},
-doi = {10.1126/science.1077635},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mayer et al. - 2002 - Formation of giant planets by fragmentation of protoplanetary disks.pdf:pdf},
-issn = {1095-9203},
-journal = {Science},
-keywords = {Computer Simulation,Evolution,Gases,Gravitation,Hydrogen,Jupiter,Planetary,Planets},
-month = nov,
-number = {5599},
-pages = {1756},
-pmid = {12459581},
-title = {{Formation of giant planets by fragmentation of protoplanetary disks.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/12459581},
-volume = {298},
-year = {2002}
-}
-@article{Mayer2003,
-author = {Mayer, Lucio and Quinn, Thomas and Wadsley, James and Stadel, Joachim},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mayer et al. - 2003 - Simulations of unstable gaseous disks and the origin of giant planets.pdf:pdf},
-journal = {arXiv Prepr. astro-ph/0301591},
-pages = {1998--2003},
-title = {{Simulations of unstable gaseous disks and the origin of giant planets}},
-url = {http://arxiv.org/abs/astro-ph/0301591},
-volume = {294},
-year = {2003}
-}
-@article{Morbidelli2014a,
-abstract = {We present global hydrodynamic and magnetohydrodynamic (MHD) simulations with mesh refinement of accreting planets embedded in protoplanetary disks (PPDs). The magnetized disk includes Ohmic resistivity that depends on the overlying mass column, leading to turbulent surface layers and a dead zone near the midplane. The main results are: (i) The accretion flow in the Hill sphere is intrinsically 3D for hydrodynamic and MHD models. Net inflow toward the planet is dominated by high latitude flows. A circumplanetary disk (CPD) forms. Its midplane flows outward in a pattern whose details differ between models. (ii) Gap opening magnetically couples and ignites the dead zone near the planet, leading to stochastic accretion, a quasi-turbulent flow in the Hill sphere and a CPD whose structure displays high levels of variability. (iii) Advection of magnetized gas onto the rotating CPD generates helical fields that launch magnetocentrifugally driven outflows. During one specific epoch a highly collimated, one-sided jet is observed. (iv) The CPD's surface density \$\backslash sim30\{\backslash rm\backslash,g\backslash,cm\^{}\{-2\}\}\$, small enough for significant ionization and turbulence to develop. (v) The accretion rate onto the planet in the MHD simulation reaches a steady value \$8 \backslash times 10\^{}\{-3\} \{\backslash rm M\_\backslash oplus yr\^{}\{-1\}\}\$, and is similar in the viscous hydrodynamic runs. Our results suggest that gas accretion onto a forming giant planet within a magnetized PPD with dead zone allows rapid growth from Saturnian to Jovian masses. As well as being relevant for giant planet formation, these results have important implications for the formation of regular satellites around gas giant planets.},
-author = {Morbidelli, A. and Szul\'{a}gyi, J. and Crida, A. and Lega, E. and Bitsch, B. and Tanigawa, T. and Kanagawa, K.},
-doi = {10.1016/j.icarus.2014.01.010},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Morbidelli et al. - 2014 - Meridional circulation of gas into gaps opened by giant planets in three-dimensional low-viscosity disks.pdf:pdf},
-issn = {00191035},
-journal = {Icarus},
-month = apr,
-pages = {266--270},
-publisher = {Elsevier Inc.},
-title = {{Meridional circulation of gas into gaps opened by giant planets in three-dimensional low-viscosity disks}},
-url = {http://linkinghub.elsevier.com/retrieve/pii/S0019103514000323},
-volume = {232},
-year = {2014}
-}
-@article{Nagel2007,
-author = {Nagel, E},
-file = {:home/oscar/Dropbox/maestria/tesis\_maestria/papers/RMxAA..43-2\_enagel.pdf:pdf},
-journal = {RevMexAA},
-keywords = {accretion,accretion disks,circumstellar,forma-,hydrodynamics,matter,stars,tesis\_maestria},
-mendeley-tags = {tesis\_maestria},
-pages = {257--270},
-title = {{Formation of a two-dense-rings-pattern disk from the collapse of a cloud}},
-url = {http://www.scielo.org.mx/scielo.php?pid=S0185-11012007000200003\&script=sci\_arttext\&tlng=en},
-volume = {270},
-year = {2007}
-}
-@article{Pollack1996,
-author = {Pollack, JB and Hubickyj, Olenka and Bodenheimer, Peter and Lissauer, Jack J and Podolak, Morris and Greenzweig, Yuval},
-doi = {10.1006/icar.1996.0190},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pollack - 1996 - Formation of the Giant Planets by Concurrent Accretion of Solids and Gas.pdf:pdf},
-issn = {00191035},
-journal = {Icarus},
-month = nov,
-number = {1},
-pages = {62--85},
-title = {{Formation of the Giant Planets by Concurrent Accretion of Solids and Gas}},
-url = {http://www.sciencedirect.com/science/article/pii/S0019103596901906},
-volume = {124},
-year = {1996}
-}
-@article{Rivier2012,
-author = {Rivier, G and Crida, A and Morbidelli, A and Brouet, Y},
-doi = {10.1051/0004-6361/201218879},
-file = {:home/oscar/papers/aa18879-12.pdf:pdf},
-issn = {0004-6361},
-journal = {A\&A},
-keywords = {accretion,accretion disks,formation,planet-disk interactions,planets and satellites,protoplanetary disks},
-month = dec,
-pages = {A116},
-title = {{Circum-planetary discs as bottlenecks for gas accretion onto giant planets}},
-url = {http://www.aanda.org/10.1051/0004-6361/201218879},
-volume = {548},
-year = {2012}
-}
-@article{Safronov1967,
-author = {Safronov, VS},
-file = {:home/oscar/papers/1967SvA....10..650S.pdf:pdf},
-journal = {Sov. Astron.},
-number = {4},
-pages = {817--828},
-title = {{The protoplanetary cloud and its evolution}},
-url = {http://adsabs.harvard.edu/full/1967SvA....10..650S},
-volume = {43},
-year = {1967}
-}
-@article{Szulagyi2014,
-author = {Szul\'{a}gyi, J. and Morbidelli, A. and Crida, A. and Masset, F.},
-doi = {10.1088/0004-637X/782/2/65},
-file = {:home/oscar/Dropbox/maestria/tesis\_maestria/papers/apj\_782\_2\_65.pdf:pdf},
-issn = {0004-637X},
-journal = {ApJ},
-keywords = {accretion,accretion disks,color figures,formation,gaseous planets,hydrodynamics,methods,numerical,online-only material,planets and satellites,protoplanetary disks,tesis\_maestria},
-mendeley-tags = {tesis\_maestria},
-month = feb,
-number = {2},
-pages = {65},
-title = {{ACCRETION OF JUPITER-MASS PLANETS IN THE LIMIT OF VANISHING VISCOSITY}},
-url = {http://stacks.iop.org/0004-637X/782/i=2/a=65?key=crossref.4a31034d4f221d3d9164da8e4c142437},
-volume = {782},
-year = {2014}
-}
-@article{Tanigawa2014,
-author = {Tanigawa, Takayuki and Maruta, Akito and Machida, Masahiro N.},
-doi = {10.1088/0004-637X/784/2/109},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Tanigawa, Maruta, Machida - 2014 - ACCRETION OF SOLID MATERIALS ONTO CIRCUMPLANETARY DISKS FROM PROTOPLANETARY DISKS.pdf:pdf},
-issn = {0004-637X},
-journal = {ApJ},
-keywords = {color figures,disks have been studied,formation,online-only material,planets and satellites,protoplanetary disks,the structures of circumplanetary,there were pioneering works,using hydrodynamic simulations},
-month = apr,
-number = {2},
-pages = {109},
-title = {{ACCRETION OF SOLID MATERIALS ONTO CIRCUMPLANETARY DISKS FROM PROTOPLANETARY DISKS}},
-url = {http://stacks.iop.org/0004-637X/784/i=2/a=109?key=crossref.bf12ce840e62e476b009e5a5a5115515},
-volume = {784},
-year = {2014}
-}
-@article{Tanigawa2012,
-abstract = {We investigate gas accretion flow onto a circumplanetary disk from a protoplanetary disk in detail by using high-resolution three-dimensional nested-grid hydrodynamic simulations, in order to provide a basis of formation processes of satellites around giant planets. Based on detailed analyses of gas accretion flow, we find that most of gas accretion onto circumplanetary disks occurs nearly vertically toward the disk surface from high altitude, which generates a shock surface at several scale heights of the circumplanetary disk. The gas that has passed through the shock surface moves inward because its specific angular momentum is smaller than that of the local Keplerian rotation, while gas near the midplane in the protoplanetary disk cannot accrete to the circumplanetary disk. Gas near the midplane within the planet's Hill sphere spirals outward and escapes from the Hill sphere through the two Lagrangian points L1 and L2. We also analyze fluxes of accreting mass and angular momentum in detail and find that the distributions of the fluxes onto the disk surface are well described by power-law functions and that a large fraction of gas accretion occurs at the outer region of the disk, i.e., at about 0.1 times the Hill radius. The nature of power-law functions indicates that, other than the outer edge, there is no specific radius where gas accretion is concentrated. These source functions of mass and angular momentum in the circumplanetary disk would provide us with useful constraints on the structure and evolution of the circumplanetary disk, which is important for satellite formation.},
-author = {Tanigawa, Takayuki and Ohtsuki, Keiji and Machida, Masahiro N.},
-doi = {10.1088/0004-637X/747/1/47},
-issn = {0004-637X},
-journal = {ApJ},
-keywords = {hydrodynamics,methods: numerical,planets and satellites: formation,protoplanetary disks,shock waves},
-month = mar,
-number = {1},
-pages = {47},
-title = {{DISTRIBUTION OF ACCRETING GAS AND ANGULAR MOMENTUM ONTO CIRCUMPLANETARY DISKS}},
-url = {http://adsabs.harvard.edu/abs/2012ApJ...747...47T},
-volume = {747},
-year = {2012}
-}
-@article{Toomre1964,
-author = {Toomre, A.},
-doi = {10.1086/147861},
-issn = {0004-637X},
-journal = {ApJ},
-month = may,
-pages = {1217},
-title = {{On the gravitational stability of a disk of stars}},
-url = {http://adsabs.harvard.edu/abs/1964ApJ...139.1217T},
-volume = {139},
-year = {1964}
-}
-@article{Williams2011a,
-author = {Williams, Jonathan P. and Cieza, Lucas a.},
-doi = {10.1146/annurev-astro-081710-102548},
-file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Williams, Cieza - 2011 - Protoplanetary Disks and Their Evolution.pdf:pdf},
-issn = {0066-4146},
-journal = {ARA\&A},
-keywords = {accretion,circumstellar matter,main sequence stars,planet formation,pre},
-month = sep,
-number = {1},
-pages = {67--117},
-title = {{Protoplanetary Disks and Their Evolution}},
-url = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-081710-102548},
-volume = {49},
-year = {2011}
+arxivId = {1702.00691},
+author = {Barrag{\'{a}}n, Oscar and Gandolfi, D. and Smith, A. M. S. and Deeg, H. J. and Fridlund, M. C. V. and Persson, C. M. and Donati, P. and Endl, M. and Csizmadia, Sz. and Grziwa, S. and Nespral, D. and Hatzes, A. P. and Cochran, W. D. and Fossati, L. and Brems, S. S. and Cabrera, J. and Cusano, F. and Eigm{\"{u}}ller, Ph. and Eiroa, C. and Erikson, A. and Guenther, E. and Korth, J. and Mancini, L. and P{\"{a}}tzold, M. and Prieto-Arranz, J. and Rauer, H. and Rebollido, I. and Saario, J. and Zakhozhay, O. V.},
+eprint = {1702.00691},
+file = {:home/oscar/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Barrag{\'{a}}n et al. - 2017 - EPIC 218916923 b a low-mass warm Jupiter on a 29-day orbit transiting an active K0 V star.pdf:pdf},
+keywords = {detection,epic 218916923 b,fundamental parameters,individual,planetary systems,planets and satellites,stars},
+month = {feb},
+number = {February},
+pages = {1--10},
+title = {{EPIC 218916923 b: a low-mass warm Jupiter on a 29-day orbit transiting an active K0 V star}},
+url = {http://arxiv.org/abs/1702.00691},
+volume = {10},
+year = {2017}
 }
