--- a/mainmatter/introduction.tex
+++ b/mainmatter/introduction.tex
@@ -1,4 +1,4 @@
 \chapter{Introduction}
 
 
-This is a nice cite \citep{Masset2000}, this also is nice \citet{Armitage2011a}.
+This is a nice cite \citep{Barragan2016}, this also is nice \citet{Barragan2017}.
